Adds redirection button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
   <h1>LacOp Simulation</h1>
+
+  <a href="simulation.html">
+    <button>Go To Simulation</button>
+  </a>
+  
   <table id="temp-table">
     <tr>
       <th>Time</th>
