--- a/simulation.html
+++ b/simulation.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LacOp Simulation</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <!-- scripts will execute after the page has loaded -->
     <script type="module" src="js/scripts.js" defer></script>
     <script type="module" src="js/graph.js" defer></script>
 </head>
@@ -151,7 +152,7 @@
     </div>
     
     <div class="tabs">
-    <button><b>End Simulation Session</b></button>
+        <button><b>End Simulation Session</b></button>
     </div>
 </body>
 </html>
