--- a/simulation.html
+++ b/simulation.html
@@ -6,7 +6,7 @@
     <title>LacOp Simulation</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <!-- scripts will execute after the page has loaded -->
-    <script type="module" src="js/script.js" defer></script>
+    <script src="js/script.js" defer></script>
 </head>
 <body>
 
