--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>LacOp Simulation</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <!-- scripts will execute after the page has loaded -->
-    <script type="module" src="js/script.js" defer></script>
+    <script src="js/script.js" defer></script>
+    <script type="module" src="js/graph.js" defer></script>
 </head>
 <body>
 
