--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
     <br>
 
     <div class="tabs">
-        <button class="tablinks" onclick="openTab(event, "sugars")"><b>Sugars</b></button>
-        <button class="tablinks" onclick="openTab(event, "promoter")"><b>Promoter</b></button>
-        <button class="tablinks" onclick="openTab(event, "operator")"><b>Operator</b></button>
-        <button class="tablinks" onclick="openTab(event, "repressor")"><b>Repressor</b></button>
-        <button class="tablinks" onclick="openTab(event, "permease")"><b>Permease</b></button>
-        <button class="tablinks" onclick="openTab(event, "betaG")"><b>Beta-Galactosidase</b></button>
-        <button class="tablinks" onclick="openTab(event, "CAP")"><b>CAP-cAMP Complex</b></button>
-        <button class="tablinks" onclick="openTab(event, "plasmid")"><b>Plasmid</b></button>
+        <button class="tablinks" onclick="openTab(event, 'sugars')"><b>Sugars</b></button>
+        <button class="tablinks" onclick="openTab(event, 'promoter')"><b>Promoter</b></button>
+        <button class="tablinks" onclick="openTab(event, 'operator')"><b>Operator</b></button>
+        <button class="tablinks" onclick="openTab(event, 'repressor')"><b>Repressor</b></button>
+        <button class="tablinks" onclick="openTab(event, 'permease')"><b>Permease</b></button>
+        <button class="tablinks" onclick="openTab(event, 'betaG')"><b>Beta-Galactosidase</b></button>
+        <button class="tablinks" onclick="openTab(event, 'CAP')"><b>CAP-cAMP Complex</b></button>
+        <button class="tablinks" onclick="openTab(event, 'plasmid')"><b>Plasmid</b></button>
+
     </div>
 
     <div class="container1">
