--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <!-- scripts will execute after the page has loaded -->
     <script src="js/script.js" defer></script>
-    <script type="module" src="js/graph.js" defer>
-        import { drawGraph } from "./js/main.js"
+    <script type="module">
+        import { drawGraph } from "./js/graph.js"
     </script>
 </head>
 <body>
