--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <!-- scripts will execute after the page has loaded -->
     <script src="js/script.js" defer></script>
-    <script type="module">
-        import { drawGraph } from "./js/graph.js"
-    </script>
+    <script type="module" src="js/graph.js" defer></script>
 </head>
 <body>
 
