--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </div>
     </div>
     <div class="tabs">
-        <button id="runBtn" onclick="drawGraph()"><b>Run Pathway & Make Graph</b></button>
+        <button id="runBtn"><b>Run Pathway & Make Graph</b></button>
     </div>
     
     <div id="runGraph" class="content">
