--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
         <div class="plasmid"><p>Plasmid:</p><div id="plas"></div> </div> 
     </div>
 
-    <div id="displayGraph">
+    <canvas id="displayGraph">
         
-    </div>
+    </canvas>
     
     <div class="tabs">
         <button><b>End Simulation Session</b></button>
