Modifies input values (repressor, bgal)

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         <!-- <p>Content for Tab 4.</p> -->
         <label><input id="repNone" type="radio" name="tab4Options" value="None">None: Functional 'wild type' Repressor</label>
         <br>
-        <label><input id="repOne" type="radio" name="tab4Options" value="lacl-">lacl-: A mutation which eliminates the repressor function</label>
+        <label><input id="repOne" type="radio" name="tab4Options" value="lacI-">lacl-: A mutation which eliminates the repressor function</label>
         <br>
-        <label><input id="repTwo" type="radio" name="tab4Options" value="lacls">lacls: A 'super' repressor which is no longer responsive to Allolactose</label>
+        <label><input id="repTwo" type="radio" name="tab4Options" value="lacIs">lacls: A 'super' repressor which is no longer responsive to Allolactose</label>
     </div>
 
     <div id="permease" class="content">
@@ -93,7 +93,7 @@
         <!-- <p>Content for Tab 6.</p> -->
         <label><input id="betaNone" type="radio" name="tab6Options" value="None">None: Functional 'wild type' beta-galactosidase enzyme</label>
         <br>
-        <label><input id="betaOne" type="radio" name="tab6Options" value="lacY-">lacY-: A mutation which eliminates the beta-galactosidase function</label>
+        <label><input id="betaOne" type="radio" name="tab6Options" value="lacZ-">lacY-: A mutation which eliminates the beta-galactosidase function</label>
     </div>
 
     <div id="CAP" class="content">
