--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <!-- <p>Content for Tab 6.</p> -->
         <label><input id="betaNone" type="radio" name="tab6Options" value="None">None: Functional 'wild type' beta-galactosidase enzyme</label>
         <br>
-        <label><input id="betaOne" type="radio" name="tab6Options" value="lacZ-">lacY-: A mutation which eliminates the beta-galactosidase function</label>
+        <label><input id="betaOne" type="radio" name="tab6Options" value="lacZ-">lacZ-: A mutation which eliminates the beta-galactosidase function</label>
     </div>
 
     <div id="CAP" class="content">
