--- a/tutorial.html
+++ b/tutorial.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="header">
-        <br>
-        <!-- <img src="ecoli.png" width="100" height="50"> -->
+        <!-- <br> -->
+        <img src="ecoli.png" width="100" height="50">
         <h1>LacOp</h1>
         <a href="simulation.html"><button><h3>Simulation</h3></button></a>
         <a href="tutorial.html"><button><h3>Tutorial</h3></button></a>
@@ -19,24 +19,25 @@
     <br>
 
     <!-- <h1><u>Describe the graph here/what can be done with it here - explanations</h1></u> -->
-    
+<div class="combined">
     <div class="contents">
     <h2>
         <!-- explain the different parts here -->
-        <button><h2><b>Overview</b></h2></button>
+        <button id="overview" type="button"><h2><b>Overview</b></h2></button>
         <br>
-        <button><h2><b>Background</b></h2></button>
+        <button id="background" type="button"><h2><b>Background</b></h2></button>
         <br>
-        <button><h2><b>Part A</b></h2></button>
+        <button id="partA" type="button"><h2><b>Part A</b></h2></button>
         <br>
-        <button><h2><b>Part B</b></h2></button>        
+        <button id="partB" type="button"><h2><b>Part B</b></h2></button>        
         <br>
-        <button><h2><b>Part C</b></h2></button>
+        <button id="partC" type="button"><h2><b>Part C</b></h2></button>
         <br>
-        <button><h2><b>Part D</b></h2></button>
+        <button id="partD" type="button"><h2><b>Part D</b></h2></button>
     </h2>
     </div>
-
-    <script src="scripts.js"></script>
+    <div id="textContent"></div>
+</div>
+<script src="js/tutorialScript.js"></script>
 </body>
 </html>
