Adds graph container
graph container is a html canvas element

--- a/simulation.html
+++ b/simulation.html
@@ -197,9 +197,9 @@
         <div class="plasmid"><p>Plasmid:</p><div id="plas"></div> </div>
         
     </div>
-<div id="plasmidInputs">
-    <h2><u>Plasmid Lactose Operon</u></h2>
-    <div class="promoter"><p>Promoter:</p><div id="prom2"></div></div>
+    <div id="plasmidInputs">
+        <h2><u>Plasmid Lactose Operon</u></h2>
+        <div class="promoter"><p>Promoter:</p><div id="prom2"></div></div>
         <br>
         <div class="operator"><p>Operator:</p><div id="oper2"></div></div>
         <br>
@@ -208,18 +208,14 @@
         <div class="permease"><p>Permease:</p><div id="perm2"></div> </div>
         <br>
         <div class="betaGal"><p>Beta-Galactosidase:</p><div id="bGal2"></div> </div>
-
-
-</div>
-
+    </div>
+    <canvas id="graphContainer">
+    </canvas>
 </div>
     
     <div class="tabs">
     <a href="lastPage.html"><button><b>End Simulation Session</b></button></a>
     </div>
-
-
-
 
     <script src="js/scripts.js"></script>
 </body>
