--- a/simulation.html
+++ b/simulation.html
@@ -41,14 +41,14 @@
     <div id="sugars" class="content">
         <h1>Sugar Concentration</h1>
         <h3>Varying sugar concentrations within and outside the cell.</h3>
-        <p>Lactose Inside:</p>
-        <input type="text" id="lacIn" placeholder="Lactose Inside" value="0">
-        <p>Lactose Outside:</p>
+        <p>Lactose Exterior:</p>
         <input type="text" id="lacOut" placeholder="Lactose Outside" value="200">
-        <p>Allolactose:</p>
-        <input type="text" id="allo" placeholder="Allolactose" value="0">
         <p>Glucose:</p>
         <input type="text" id="gluc" placeholder="Glucose" value="0">
+        <p>Lactose Interior:</p>
+        <input type="text" id="lacIn" placeholder="Lactose Inside" value="0">
+        <p>Allolactose:</p>
+        <input type="text" id="allo" placeholder="Allolactose" value="0">
     </div>
 
     <div id="promoter" class="content">
@@ -75,9 +75,9 @@
         <!-- <p>Content for Tab 4.</p> -->
         <label><input id="repNone" type="radio" name="tab4Options" value="None" checked>None: Functional 'wild type' Repressor</label>
         <br>
-        <label><input id="repOne" type="radio" name="tab4Options" value="lacl-">lacl-: A mutation which eliminates the repressor function</label>
+        <label><input id="repOne" type="radio" name="tab4Options" value="lacI-">lacI-: A mutation which eliminates the repressor function</label>
         <br>
-        <label><input id="repTwo" type="radio" name="tab4Options" value="lacls">lacls: A 'super' repressor which is no longer responsive to Allolactose</label>
+        <label><input id="repTwo" type="radio" name="tab4Options" value="lacIs">lacIs: A 'super' repressor which is no longer responsive to Allolactose</label>
     </div>
 
     <div id="permease" class="content">
@@ -173,28 +173,28 @@
     <div class="combined">
     <div id="displayInputs">
         <h2><u>Initial Sugar Concentrations</u></h2>
-        <div class="lactoseExterior"><p>Lactose Exterior:</p><div id="lacExInput"></div></div>
+        <div class="lactoseExterior"><p>Lactose Exterior: </p><div id="lacExInput"></div></div>
         <br>
-        <div class="glucose"><p>Glucose:</p><div id="gluInput"></div></div>
+        <div class="glucose"><p>Glucose: </p><div id="gluInput"></div></div>
         <br>
-        <div class="lactoseInterior"><p>Lactose Interior:</p><div id="lacInInput"></div></div>
+        <div class="lactoseInterior"><p>Lactose Interior: </p><div id="lacInInput"></div></div>
         <br>
-        <div class="lactoseAllo"><p>Lactose Allolactose:</p><div id="lacAlInput"></div></div>
+        <div class="lactoseAllo"><p>Lactose Allolactose: </p><div id="lacAlInput"></div></div>
         
         <h2><u>Lactose Operon</u></h2>
-        <div class="promoter"><p>Promoter:</p><div id="prom"></div></div>
+        <div class="promoter"><p>Promoter: </p><div id="prom"></div></div>
         <br>
-        <div class="operator"><p>Operator:</p><div id="oper"></div></div>
+        <div class="operator"><p>Operator: </p><div id="oper"></div></div>
         <br>
-        <div class="repressor"><p>Repressor:</p><div id="rep"></div> </div>
+        <div class="repressor"><p>Repressor: </p><div id="rep"></div> </div>
         <br>
-        <div class="permease"><p>Permease:</p><div id="perm"></div> </div>
+        <div class="permease"><p>Permease:&nbsp;</p><div id="perm"></div> </div>
         <br>
-        <div class="betaGal"><p>Beta-Galactosidase:</p><div id="bGal"></div> </div>
+        <div class="betaGal"><p>Beta-Galactosidase:&nbsp;</p><div id="bGal"></div> </div>
         <br>
-        <div class="CAP"><p>CAP-cAMP:</p><div id="CAPCAMP"></div> </div>
+        <div class="CAP"><p>CAP-cAMP:&nbsp;</p><div id="CAPCAMP"></div> </div>
         <br>
-        <div class="plasmid"><p>Plasmid:</p><div id="plas"></div> </div>
+        <div class="plasmid"><p>Plasmid:&nbsp;</p><div id="plas"></div> </div>
         
     </div>
     <div id="plasmidInputs">
