--- a/simulation.html
+++ b/simulation.html
@@ -15,7 +15,7 @@
         <!-- <br> -->
         <img src="ecoli.png" width="100" height="50">
         <h1>LacOp</h1>
-        <a href="index.html"><button><h3>Simulation</h3></button></a>
+        <a href="simulation.html"><button><h3>Simulation</h3></button></a>
         <a href="tutorial.html"><button><h3>Tutorial</h3></button></a>
         <a href="about.html"><button><h3>About</h3></button></a>
         
