--- a/simulation.html
+++ b/simulation.html
@@ -23,7 +23,7 @@
     <br>
     <!-- temporarily keeping till done for easy viewing: delete this button after -->
     <div class="tabs">
-        <a href="firstPage.html"><button><b>Back to First Page</b></button></a>
+        <a href="index.html"><button><b>Back to First Page</b></button></a>
     </div>
     <br>
     <div class="tabs">
