--- a/submission.html
+++ b/submission.html
@@ -26,7 +26,7 @@
     <br> Thank you for submitting!
 
     <div class="tabs">
-    <a href="firstPage.html"><button><b>first</b></button></a>
+    <a href="index.html"><button><b>first</b></button></a>
     </div>
 
     <div class="tabs">
