Adds id to run button

--- a/simulation.html
+++ b/simulation.html
@@ -163,7 +163,7 @@
     </div>
 </div>
 <div class="tabs">
-    <button><b>Run Pathway & Make Graph</b></button>
+    <button id="runBtn"><b>Run Pathway & Make Graph</b></button>
 </div>
     
     <div id="runGraph" class="content">
