Adds spaces after output labels

--- a/simulation.html
+++ b/simulation.html
@@ -182,11 +182,11 @@
         <div class="lactoseAllo"><p>Lactose Allolactose: </p><div id="lacAlInput"></div></div>
         
         <h2><u>Lactose Operon</u></h2>
-        <div class="promoter"><p>Promoter: </p><div id="prom"></div></div>
+        <div class="promoter"><p>Promoter:&nbsp;</p><div id="prom"></div></div>
         <br>
-        <div class="operator"><p>Operator: </p><div id="oper"></div></div>
+        <div class="operator"><p>Operator:&nbsp;</p><div id="oper"></div></div>
         <br>
-        <div class="repressor"><p>Repressor: </p><div id="rep"></div> </div>
+        <div class="repressor"><p>Repressor:&nbsp;</p><div id="rep"></div> </div>
         <br>
         <div class="permease"><p>Permease:&nbsp;</p><div id="perm"></div> </div>
         <br>
@@ -199,15 +199,15 @@
     </div>
     <div id="plasmidInputs">
         <h2><u>Plasmid Lactose Operon</u></h2>
-        <div class="promoter"><p>Promoter:</p><div id="prom2"></div></div>
+        <div class="promoter"><p>Promoter:&nbsp;</p><div id="prom2"></div></div>
         <br>
-        <div class="operator"><p>Operator:</p><div id="oper2"></div></div>
+        <div class="operator"><p>Operator:&nbsp;</p><div id="oper2"></div></div>
         <br>
-        <div class="repressor"><p>Repressor:</p><div id="rep2"></div> </div>
+        <div class="repressor"><p>Repressor:&nbsp;</p><div id="rep2"></div> </div>
         <br>
-        <div class="permease"><p>Permease:</p><div id="perm2"></div> </div>
+        <div class="permease"><p>Permease:&nbsp;</p><div id="perm2"></div> </div>
         <br>
-        <div class="betaGal"><p>Beta-Galactosidase:</p><div id="bGal2"></div> </div>
+        <div class="betaGal"><p>Beta-Galactosidase:&nbsp;</p><div id="bGal2"></div> </div>
     </div>
     <canvas id="graphContainer">
     </canvas>
