--- a/simulation.html
+++ b/simulation.html
@@ -55,7 +55,7 @@
         <h1>Promoter</h1>
         <h3>Promotes the transcription of lacZ and LacY</h3>
         <!-- <p>Content for Tab 2.</p> -->
-        <label><input id="promNone" type="radio" name="tab2Options" value="None" checked>None: Functional 'wild type' Promoter</label>
+        <label><input id="promNone" type="radio" name="tab2Options" value="noneP" checked>None: Functional 'wild type' Promoter</label>
         <br>
         <label><input id="promOne" type="radio" name="tab2Options" value="lacP-">lacP-: A mutation which deletes the Promoter</label>
     </div>
@@ -64,7 +64,7 @@
         <h1>Operator</h1>
         <h3>A binding site for Repressor, which can Repress transcription of lacZ and lacY</h3>
         <!-- <p>Content for Tab 3.</p> -->
-        <label><input id="opNone" type="radio" name="tab3Options" value="None" checked>None: Functional 'wild type' Operator</label>
+        <label><input id="opNone" type="radio" name="tab3Options" value="noneO" checked>None: Functional 'wild type' Operator</label>
         <br>
         <label><input id="opOne" type="radio" name="tab3Options" value="lacOc">lacOc: A mutation which deletes the Operater</label>
     </div>
@@ -73,7 +73,7 @@
         <h1>Repressor</h1>
         <h3>A protein that binds to the operator and prevents transcription of LazZ and LacY</h3>
         <!-- <p>Content for Tab 4.</p> -->
-        <label><input id="repNone" type="radio" name="tab4Options" value="None" checked>None: Functional 'wild type' Repressor</label>
+        <label><input id="repNone" type="radio" name="tab4Options" value="noneI" checked>None: Functional 'wild type' Repressor</label>
         <br>
         <label><input id="repOne" type="radio" name="tab4Options" value="lacI-">lacI-: A mutation which eliminates the repressor function</label>
         <br>
@@ -84,7 +84,7 @@
         <h1>Permease (LacY)</h1>
         <h3>A membrane protein that speeds the transport of lactose into the cell</h3>
         <!-- <p>Content for Tab 5.</p> -->
-        <label><input id="permNone" type="radio" name="tab5Options" value="None" checked>None: Functional 'wild type' Permease</label>
+        <label><input id="permNone" type="radio" name="tab5Options" value="noneY" checked>None: Functional 'wild type' Permease</label>
         <br>
         <label><input id="permOne" type="radio" name="tab5Options" value="lacY-">lacY-: A mutation which eliminates the permease function</label>
     </div>
@@ -92,7 +92,7 @@
         <h1>Beta-Galactosidase (LacZ)</h1>
         <h3>An enzyme binds lactose and catalyzes its conversion into allolactose and glucose which will be eventually metabolized into energy.</h3>
         <!-- <pS>Content for Tab 6.</p> -->
-        <label><input id="betaNone" type="radio" name="tab6Options" value="None" checked>None: Functional 'wild type' beta-galactosidase enzyme</label>
+        <label><input id="betaNone" type="radio" name="tab6Options" value="noneZ" checked>None: Functional 'wild type' beta-galactosidase enzyme</label>
         <br>
         <label><input id="betaOne" type="radio" name="tab6Options" value="lacZ-">lacZ-: A mutation which eliminates the beta-galactosidase function</label>
     </div>
@@ -116,48 +116,48 @@
         <div id="pres">
             <h3>Promoter:</h3>
             <label>
-                <input id="plasPromPres" type="radio" name="promo" value="Present" checked> Present: Functional 'wild type' Promoter.
+                <input id="plasPromPres" type="radio" name="promo" value="lacP-" checked> lacP-: Functional 'wild type' Promoter.
             </label>
             <br>
             <label>
-                <input id="plasPromAbs" type="radio" name="promo" value="Absent"> Absent: No lac promoter present on the plasmid.
+                <input id="plasPromAbs" type="radio" name="promo" value="noneP"> Absent: No lac promoter present on the plasmid.
             </label>
             <h3>Operator:</h3>
             <label>
                 <!-- ///fix these - specifics are incorrect -->
-                <input id="plasOperPres" type="radio" name="oper" value="Present" checked> Present: Functional 'wild type' Operator
+                <input id="plasOperPres" type="radio" name="oper" value="lacOc" checked> lacOc: Functional 'wild type' Operator
             </label>
             <br>
             <label>
-                <input id="plasOperAbs" type="radio" name="oper" value="Absent"> Absent: No lac operator present on the plasmid.
+                <input id="plasOperAbs" type="radio" name="oper" value="noneO"> Absent: No lac operator present on the plasmid.
             </label>
             <h3>Repressor:</h3>
             <label>
-                <input id="plasRepNone" type="radio" name="repress" value="None" checked> None: Functional 'wild type' Repressor
-            </label>
-            <br>
-            <label>
-                <input id="plasRepAbs" type="radio" name="repress" value="Absent"> Absent: No repressor present on the plasmid.
+                <input id="plasRepNone" type="radio" name="repress" value="lacI-" checked> lacI-: Functional 'wild type' Repressor
             </label>
             <br>
             <label>
                 <input id="plasRepLac" type="radio" name="repress" value="lacIs"> lacIs: A 'super' repressor which is no longer responsive to Allolactose
             </label>
+            <br>
+            <label>
+                <input id="plasRepAbs" type="radio" name="repress" value="noneI"> Absent: No repressor present on the plasmid.
+            </label>
             <h3>Permease:</h3>
             <label>
-                <input id="plasPermNone" type="radio" name="perm" value="None" checked> None: Functional 'wild type' Permease
+                <input id="plasPermNone" type="radio" name="perm" value="lacY-" checked> lacY-: Functional 'wild type' Permease
             </label>
             <br>
             <label>
-                <input id="plasPermAbs" type="radio" name="perm" value="Absent"> Absent-: No lacY gene on the plasmid.
+                <input id="plasPermAbs" type="radio" name="perm" value="noneY"> Absent: No lacY gene on the plasmid.
             </label>
             <h3>Beta-Galactosidase:</h3>
             <label>
-                <input id="plasBNone" type="radio" name="beta" value="None" checked> None: Functional 'wild type' lacZ enzyme
+                <input id="plasBNone" type="radio" name="beta" value="lacZ=" checked> lacZ-: Functional 'wild type' lacZ enzyme
             </label>
             <br>
             <label>
-                <input id="plasBAbs" type="radio" name="beta" value="Absent"> Absent: No lacZ gene present on plasmid.
+                <input id="plasBAbs" type="radio" name="beta" value="noneZ"> Absent: No lacZ gene present on plasmid.
             </label>
                 </div>
     </div>
