Adds spaces after output labels

--- a/simulation.html
+++ b/simulation.html
@@ -173,13 +173,13 @@
     <div class="combined">
     <div id="displayInputs">
         <h2><u>Initial Sugar Concentrations</u></h2>
-        <div class="lactoseExterior"><p>Lactose Exterior: </p><div id="lacExInput"></div></div>
+        <div class="lactoseExterior"><p>Lactose Exterior:&nbsp;</p><div id="lacExInput"></div></div>
         <br>
-        <div class="glucose"><p>Glucose: </p><div id="gluInput"></div></div>
+        <div class="glucose"><p>Glucose:&nbsp;</p><div id="gluInput"></div></div>
         <br>
-        <div class="lactoseInterior"><p>Lactose Interior: </p><div id="lacInInput"></div></div>
+        <div class="lactoseInterior"><p>Lactose Interior:&nbsp;</p><div id="lacInInput"></div></div>
         <br>
-        <div class="lactoseAllo"><p>Lactose Allolactose: </p><div id="lacAlInput"></div></div>
+        <div class="lactoseAllo"><p>Lactose Allolactose:&nbsp;</p><div id="lacAlInput"></div></div>
         
         <h2><u>Lactose Operon</u></h2>
         <div class="promoter"><p>Promoter:&nbsp;</p><div id="prom"></div></div>
