--- a/simulation.html
+++ b/simulation.html
@@ -153,7 +153,7 @@
             </label>
             <h3>Beta-Galactosidase:</h3>
             <label>
-                <input id="plasBNone" type="radio" name="beta" value="lacZ=" checked> lacZ-: Functional 'wild type' lacZ enzyme
+                <input id="plasBNone" type="radio" name="beta" value="lacZ-" checked> lacZ-: Functional 'wild type' lacZ enzyme
             </label>
             <br>
             <label>
@@ -173,41 +173,41 @@
     <div class="combined">
     <div id="displayInputs">
         <h2><u>Initial Sugar Concentrations</u></h2>
-        <div class="lactoseExterior"><p>Lactose Exterior:&nbsp;</p><div id="lacExInput"></div></div>
+        <div class="lactoseExterior"><p>Lactose Exterior:&#20;</p><div id="lacExInput"></div></div>
         <br>
-        <div class="glucose"><p>Glucose:&nbsp;</p><div id="gluInput"></div></div>
+        <div class="glucose"><p>Glucose:&#20;</p><div id="gluInput"></div></div>
         <br>
-        <div class="lactoseInterior"><p>Lactose Interior:&nbsp;</p><div id="lacInInput"></div></div>
+        <div class="lactoseInterior"><p>Lactose Interior:&#20;</p><div id="lacInInput"></div></div>
         <br>
-        <div class="lactoseAllo"><p>Lactose Allolactose:&nbsp;</p><div id="lacAlInput"></div></div>
+        <div class="lactoseAllo"><p>Lactose Allolactose:&#20;</p><div id="lacAlInput"></div></div>
         
         <h2><u>Lactose Operon</u></h2>
-        <div class="promoter"><p>Promoter:&nbsp;</p><div id="prom"></div></div>
+        <div class="promoter"><p>Promoter:&#20;</p><div id="prom"></div></div>
         <br>
-        <div class="operator"><p>Operator:&nbsp;</p><div id="oper"></div></div>
+        <div class="operator"><p>Operator:&#20;</p><div id="oper"></div></div>
         <br>
-        <div class="repressor"><p>Repressor:&nbsp;</p><div id="rep"></div> </div>
+        <div class="repressor"><p>Repressor:&#20;</p><div id="rep"></div> </div>
         <br>
-        <div class="permease"><p>Permease:&nbsp;</p><div id="perm"></div> </div>
+        <div class="permease"><p>Permease:&#20;</p><div id="perm"></div> </div>
         <br>
-        <div class="betaGal"><p>Beta-Galactosidase:&nbsp;</p><div id="bGal"></div> </div>
+        <div class="betaGal"><p>Beta-Galactosidase:&#20;</p><div id="bGal"></div> </div>
         <br>
-        <div class="CAP"><p>CAP-cAMP:&nbsp;</p><div id="CAPCAMP"></div> </div>
+        <div class="CAP"><p>CAP-cAMP:&#20;</p><div id="CAPCAMP"></div> </div>
         <br>
-        <div class="plasmid"><p>Plasmid:&nbsp;</p><div id="plas"></div> </div>
+        <div class="plasmid"><p>Plasmid:&#20;</p><div id="plas"></div> </div>
         
     </div>
     <div id="plasmidInputs">
         <h2><u>Plasmid Lactose Operon</u></h2>
-        <div class="promoter"><p>Promoter:&nbsp;</p><div id="prom2"></div></div>
+        <div class="promoter"><p>Promoter:&#20;</p><div id="prom2"></div></div>
         <br>
-        <div class="operator"><p>Operator:&nbsp;</p><div id="oper2"></div></div>
+        <div class="operator"><p>Operator:&#20;</p><div id="oper2"></div></div>
         <br>
-        <div class="repressor"><p>Repressor:&nbsp;</p><div id="rep2"></div> </div>
+        <div class="repressor"><p>Repressor:&#20;</p><div id="rep2"></div> </div>
         <br>
-        <div class="permease"><p>Permease:&nbsp;</p><div id="perm2"></div> </div>
+        <div class="permease"><p>Permease:&#20;</p><div id="perm2"></div> </div>
         <br>
-        <div class="betaGal"><p>Beta-Galactosidase:&nbsp;</p><div id="bGal2"></div> </div>
+        <div class="betaGal"><p>Beta-Galactosidase:&#20;</p><div id="bGal2"></div> </div>
     </div>
     <canvas id="graphContainer">
     </canvas>
