--- a/simulation.html
+++ b/simulation.html
@@ -173,41 +173,41 @@
     <div class="combined">
     <div id="displayInputs">
         <h2><u>Initial Sugar Concentrations</u></h2>
-        <div class="lactoseExterior"><p>Lactose Exterior:&#20;</p><div id="lacExInput"></div></div>
+        <div class="lactoseExterior"><p>Lactose Exterior:</p>&nbsp;<div id="lacExInput"></div></div>
         <br>
-        <div class="glucose"><p>Glucose:&#20;</p><div id="gluInput"></div></div>
+        <div class="glucose"><p>Glucose:</p>&nbsp;<div id="gluInput"></div></div>
         <br>
-        <div class="lactoseInterior"><p>Lactose Interior:&#20;</p><div id="lacInInput"></div></div>
+        <div class="lactoseInterior"><p>Lactose Interior:</p>&nbsp;<div id="lacInInput"></div></div>
         <br>
-        <div class="lactoseAllo"><p>Lactose Allolactose:&#20;</p><div id="lacAlInput"></div></div>
+        <div class="lactoseAllo"><p>Lactose Allolactose:</p>&nbsp;<div id="lacAlInput"></div></div>
         
         <h2><u>Lactose Operon</u></h2>
-        <div class="promoter"><p>Promoter:&#20;</p><div id="prom"></div></div>
+        <div class="promoter"><p>Promoter:</p>&nbsp;<div id="prom"></div></div>
         <br>
-        <div class="operator"><p>Operator:&#20;</p><div id="oper"></div></div>
+        <div class="operator"><p>Operator:</p>&nbsp;<div id="oper"></div></div>
         <br>
-        <div class="repressor"><p>Repressor:&#20;</p><div id="rep"></div> </div>
+        <div class="repressor"><p>Repressor:</p>&nbsp;<div id="rep"></div> </div>
         <br>
-        <div class="permease"><p>Permease:&#20;</p><div id="perm"></div> </div>
+        <div class="permease"><p>Permease:</p>&nbsp;<div id="perm"></div> </div>
         <br>
-        <div class="betaGal"><p>Beta-Galactosidase:&#20;</p><div id="bGal"></div> </div>
+        <div class="betaGal"><p>Beta-Galactosidase:</p>&nbsp;<div id="bGal"></div> </div>
         <br>
-        <div class="CAP"><p>CAP-cAMP:&#20;</p><div id="CAPCAMP"></div> </div>
+        <div class="CAP"><p>CAP-cAMP:</p>&nbsp;<div id="CAPCAMP"></div> </div>
         <br>
-        <div class="plasmid"><p>Plasmid:&#20;</p><div id="plas"></div> </div>
+        <div class="plasmid"><p>Plasmid:</p>&nbsp;<div id="plas"></div> </div>
         
     </div>
     <div id="plasmidInputs">
         <h2><u>Plasmid Lactose Operon</u></h2>
-        <div class="promoter"><p>Promoter:&#20;</p><div id="prom2"></div></div>
+        <div class="promoter"><p>Promoter:</p>&nbsp;<div id="prom2"></div></div>
         <br>
-        <div class="operator"><p>Operator:&#20;</p><div id="oper2"></div></div>
+        <div class="operator"><p>Operator:</p>&nbsp;<div id="oper2"></div></div>
         <br>
-        <div class="repressor"><p>Repressor:&#20;</p><div id="rep2"></div> </div>
+        <div class="repressor"><p>Repressor:</p>&nbsp;<div id="rep2"></div> </div>
         <br>
-        <div class="permease"><p>Permease:&#20;</p><div id="perm2"></div> </div>
+        <div class="permease"><p>Permease:</p>&nbsp;<div id="perm2"></div> </div>
         <br>
-        <div class="betaGal"><p>Beta-Galactosidase:&#20;</p><div id="bGal2"></div> </div>
+        <div class="betaGal"><p>Beta-Galactosidase:</p>&nbsp;<div id="bGal2"></div> </div>
     </div>
     <canvas id="graphContainer">
     </canvas>
