--- a/simulation.html
+++ b/simulation.html
@@ -173,13 +173,13 @@
     <div class="combined">
     <div id="displayInputs">
         <h2><u>Initial Sugar Concentrations</u></h2>
-        <div class="lactoseExterior"><p>Lactose Exterior:</p>&nbsp;<div id="lacExInput"></div></div>
+        <div class="lactoseExterior"><p>Lactose Exterior:</p><div id="lacExInput">&nbsp;</div></div>
         <br>
         <div class="glucose"><p>Glucose:</p>&nbsp;<div id="gluInput"></div></div>
         <br>
-        <div class="lactoseInterior"><p>Lactose Interior:</p>&nbsp;<div id="lacInInput"></div></div>
+        <div class="lactoseInterior"><p>Lactose Interior:</p><div id="lacInInput">&nbsp;</div></div>
         <br>
-        <div class="lactoseAllo"><p>Lactose Allolactose:</p>&nbsp;<div id="lacAlInput"></div></div>
+        <div class="lactoseAllo"><p>Lactose Allolactose:</p><div id="lacAlInput">&nbsp;</div></div>
         
         <h2><u>Lactose Operon</u></h2>
         <div class="promoter"><p>Promoter:</p>&nbsp;<div id="prom"></div></div>
@@ -190,9 +190,9 @@
         <br>
         <div class="permease"><p>Permease:</p>&nbsp;<div id="perm"></div> </div>
         <br>
-        <div class="betaGal"><p>Beta-Galactosidase:</p>&nbsp;<div id="bGal"></div> </div>
+        <div class="betaGal"><p>Beta-Galactosidase:</p><div id="bGal">&nbsp;</div> </div>
         <br>
-        <div class="CAP"><p>CAP-cAMP:</p>&nbsp;<div id="CAPCAMP"></div> </div>
+        <div class="CAP"><p>CAP-cAMP:</p><div id="CAPCAMP">&nbsp;</div> </div>
         <br>
         <div class="plasmid"><p>Plasmid:</p>&nbsp;<div id="plas"></div> </div>
         
@@ -207,7 +207,7 @@
         <br>
         <div class="permease"><p>Permease:</p>&nbsp;<div id="perm2"></div> </div>
         <br>
-        <div class="betaGal"><p>Beta-Galactosidase:</p>&nbsp;<div id="bGal2"></div> </div>
+        <div class="betaGal"><p>Beta-Galactosidase:</p><div id="bGal2">&nbsp;</div> </div>
     </div>
     <canvas id="graphContainer">
     </canvas>
