Modifies positioning of output containers

--- a/simulation.html
+++ b/simulation.html
@@ -180,7 +180,8 @@
         <div class="lactoseInterior"><p>Lactose Interior:</p><div id="lacInInput">&nbsp;</div></div>
         <br>
         <div class="lactoseAllo"><p>Lactose Allolactose:</p><div id="lacAlInput">&nbsp;</div></div>
-        
+    </div>
+    <div>
         <h2><u>Lactose Operon</u></h2>
         <div class="promoter"><p>Promoter:</p>&nbsp;<div id="prom"></div></div>
         <br>
@@ -209,9 +210,10 @@
         <br>
         <div class="betaGal"><p>Beta-Galactosidase:</p><div id="bGal2">&nbsp;</div> </div>
     </div>
+    </div>
+
     <canvas id="graphContainer">
     </canvas>
-</div>
     
     <div class="tabs">
     <a href="lastPage.html"><button><b>End Simulation Session</b></button></a>
