--- a/simulation.html
+++ b/simulation.html
@@ -170,6 +170,9 @@
         <!-- submission details here -->
     </div>
 
+    <canvas id="graphContainer">
+    </canvas>
+
     <div class="combined">
     <div id="displayInputs">
         <h2><u>Initial Sugar Concentrations</u></h2>
@@ -180,7 +183,8 @@
         <div class="lactoseInterior"><p>Lactose Interior:</p><span id="lacInInput"></span></div>
         <br>
         <div class="lactoseAllo"><p>Lactose Allolactose:</p><span id="lacAlInput"></span></div>
-
+    </div>
+    <div>
         <h2><u>Lactose Operon</u></h2>
         <div class="promoter"><p>Promoter:</p>&nbsp;<span id="prom"></span></div>
         <br>
@@ -209,9 +213,6 @@
         <br>
         <div class="betaGal"><p>Beta-Galactosidase:</p><span id="bGal2"></span> </div>
     </div>
-
-    <canvas id="graphContainer">
-    </canvas>
     </div>
     
     <div class="tabs">
