Updated info about.html

--- a/about.html
+++ b/about.html
@@ -43,8 +43,8 @@ Last Update : August 29th, 2024 -->
         <p><u>Seattle University Biology Department:</u></p>
         <p><b>Robert Rutherford</b>, <i>PhD.</i></p>
         <!-- waiting on: -->
-        <p><b>Sam Nouwens</b>, <i>Cell and Molecular Biology</i></p>
-        <p><b>Midge</b>, <i>_____</i></p>
+        <p><b>Sam Nouwens</b>, <i>Cell and Molecular Biology Undergraduate</i>
+        <b>Midge</b>, <i>_____</i></p>
 
         <p><u>Seattle University Computer Science Department:</u></p>
         <p><b>Nate Kremer-Herman</b>, <i>PhD.</i></p>
